--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                         <!-- Bootstrap card -->
                         <div class="card">
-                            <img class="card-img-top" src="assets/images/HackerNewsClone.png" alt="Screenshot of the Hacker News website">
+                            <img class="card-img-top" src="assets/images/HackerNewsClone2.png" alt="Screenshot of the Hacker News website">
                             <div class="card-body">
                               <h5 class="card-title cardTitle">Hacker News Clone</h5>
                               <p class="card-text cardText">A clone of the Hacker News website.</p>
@@ -97,7 +97,16 @@
                                 target="_blank">Check It Out</a>
                             </div>
                         </div>
-
+                        <div class="card">
+                            <img class="card-img-top" src="assets/images/TicTacToe.png" alt="Screenshot of my tic tac toe game">
+                            <div class="card-body">
+                              <h5 class="card-title cardTitle">Tic Tac Toe</h5>
+                              <p class="card-text cardText">A two player Tic Tac Toe game.</p>
+                              <a href="https://marsvolta4366.github.io/MilestoneProjectI/" 
+                                class="btn btn-primary myButton"
+                                target="_blank">Check It Out</a>
+                            </div>
+                        </div>
                     </div>
                 </article>
                 <article id="skillsContent">
