Got rid of portrait

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <link rel="stylesheet" href="assets/styles.css">
     </head>
 
-    <!-- TWO PROBLEMS,
-        Fix skills so each skill takes up same amount of space
+    <!-- PROBLEMS
         Fix how hamburger menu covers name when screen gets too small
     -->
 
@@ -59,7 +58,7 @@
         
         <main>
             <div id="missionStatement">
-                <img src="assets/images/PictureOfMe.jpg" alt="Picture of Derek Slauson">
+                <!-- <img src="assets/images/PictureOfMe.jpg" alt="Picture of Derek Slauson"> -->
                 <h2>I want to turn <span id="span1">ideas</span> into <span id="span2">reality.</span></h2>
             </div>
             <div id="articles">
@@ -77,7 +76,7 @@
 
                         <!-- Bootstrap card -->
                         <div class="card">
-                            <img class="card-img-top" src="assets/images/HackerNewsClone.png" alt="Screenshot of the Hacker News website">
+                            <img class="card-img-top" src="assets/images/HackerNewsClone.png" alt="Screenshot of my hacker news clone">
                             <div class="card-body">
                               <h5 class="card-title cardTitle">Hacker News Clone</h5>
                               <p class="card-text cardText">A clone of the Hacker News website.</p>
@@ -86,7 +85,6 @@
                                 target="_blank">Check It Out</a>
                             </div>
                         </div>
-<!-- style="width: 20rem;" -->
                         <div class="card">
                             <img class="card-img-top" src="assets/images/RomanNumeralsConverter.png" alt="Screenshot of a roman numerals converter site">
                             <div class="card-body">
